SigmaCodebackup3rdSep/objects/Work_Order_Inventory_Track__c.object
<CustomObject>
    <fields>
        <fullName>Inventory_Location_Product_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product Line Item</label>
        <referenceTo>Inventory_Location_Product_Line_Item__c</referenceTo>
        <relationshipLabel>Work Order Inventory Tracks</relationshipLabel>
        <relationshipName>Work_Order_Inventory_Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product</label>
        <referenceTo>Inventory_Location_Product__c</referenceTo>
        <relationshipLabel>Work Order Inventory Tracks</relationshipLabel>
        <relationshipName>Work_Order_Inventory_Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Work Order Inventory Tracks</relationshipLabel>
        <relationshipName>Work_Order_Inventory_Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Used__c</fullName>
        <label>Quantity Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Work Order Inventory Tracks</relationshipLabel>
        <relationshipName>Work_Order_Inventory_Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Order Inventory Track</label>
    <nameField>
        <label>Work Order Inventory Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Inventory Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>